--- a/app/src/main/res/drawable/custom_dialog_bg.xml
+++ b/app/src/main/res/drawable/custom_dialog_bg.xml
@@ -1,9 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
+    <corners android:radius="5dp" />
     <solid android:color="@color/white" />
-    <stroke
-        android:width="4dp"
-        android:color="@color/colorAccent" />
-
 </shape>
