--- a/app/src/main/res/layout/dialog_failure.xml
+++ b/app/src/main/res/layout/dialog_failure.xml
@@ -11,11 +11,10 @@
         android:padding="16dp">
 
 
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/submission_succesful"
+            android:text="@string/submission_not_successful"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
@@ -26,19 +25,19 @@
         android:layout_height="80dp">
 
         <ImageView
-            android:contentDescription="@string/check"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
-            android:background="@drawable/ic_success" />
+            android:background="@drawable/ic_baseline_warning_24"
+            android:contentDescription="@string/connection_error_message" />
 
     </RelativeLayout>
 
 
 </LinearLayout>
 
- 
- 
- 
- 
+
+
+
+
 
